@@ -1,27 +1,32 @@
 
    For Release 0.8.9.2
 
-   o add to presentation
-   o maps are multithreaded also
-   o IISTHTIDIW
-   o G is reverse JED
-
-   o CA-Zone -> mainchain on a zone that includes negative residue numbers -> crash
-     Oliver Clarke.
-
-   o remove default adding of monomer on read cif dictionary
+   o mutate an ALA with hydrogens to a GLY. HA floats away (it should be deleted).
+     Make a test.
 
    o sync Bernie
 
-   o mutate an ALA with hydrogens to a GLY. HA floats away (it should be deleted)
-
 ------
+
+   o CA-Zone -> mainchain on a zone that includes negative residue numbers -> crash
+     Oliver Clarke. ::: 2 h
+
+* Done.
+
+   o remove default adding of monomer on read cif dictionary
+
+* Done.
 
    o when I have undisplayed hydrogens, I don't want to ever pick them during refinement.
      Fix. ::: 1
 
+   o G is reverse JED
+ 
+* Done.
+
    o While we are at it, I don't want to pick atoms at the back when I am refining either.
      ::: 1
+   o Fix db_mainchain fragment/chain indexing bug. Oliver Clarke ::: 1 h
 
    o copy fragment should have a "move it here" button. ::: 0.5
 
